--- a/public/css/home.css
+++ b/public/css/home.css
@@ -20,7 +20,7 @@ body.overflow {
 
 section{
 	background: linear-gradient(#1D2E62, #171625);
-	position: relative;
+	position: absolute;
 	width: 100%;
 	height: 100vh;
 	padding: 100px;
@@ -33,7 +33,7 @@ section{
 section::before{
 	content: '';
 	position: absolute;
-	bottom: 8px;
+	bottom: 0px;
 	width: 100%;
 	height: 80px;
 	background: linear-gradient(to top, #171625, transparent);
@@ -55,7 +55,7 @@ section img#moon{
 }
 
 section img#mountains_front{
-	z-index: 1009;
+	z-index: 1007;
 }
 
 #button {
