--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -6,12 +6,25 @@
   
 }
 
-@media screen and (min-width: 960px) {
+@media screen and (min-width: 390px) {
+  nav.show {
+    justify-content: center;
+  }
+
+  nav{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .navbar .nav-links{
     width: fit-content;
     position: absolute;
     top: 50px;
     right: 50px;
+    display: contents;
     z-index: 1009;
   }
 
@@ -25,17 +38,17 @@
     position: absolute;
     width: 100%;
     transform: scaleX(0);
-    height: 3px;
+    height: 1px;
     bottom: -5px;
     left: 0;
     background-color: #ffffff;
-    transform-origin: bottom right;
+    transform-origin: center;
     transition: transform 0.25s ease-out;
   }
 
   nav ul li a:hover::after {
     transform: scaleX(1);
-    transform-origin: bottom left;
+    transform-origin: center;
   }
 
   .nav{
@@ -59,8 +72,8 @@
     position: absolute;
     top: 42px;
     left: 50px;
-    width: 60px;
-    height: 60px;
+    width: 45px;
+    height: 45px;
     z-index: 1015;
   }
   
@@ -75,15 +88,21 @@
   }
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (min-width: 1200px) {
+  .navbar .nav-links {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 1200px) {
 
   /*  BURGER
   ========================================== */
   .burger {
-    width: 94px;
+    width: 40px;
     height: 59px;
     position: absolute;
-    top: 16px;
+    top: 0px;
     right: 4px;
     border-radius: 4px;
     z-index: 1010;
@@ -104,8 +123,8 @@
   }
   .burger span, .burger span::before, .burger span::after {
     display: block;
-    width: 30px;
-    height: 3px;
+    width: 25px;
+    height: 2px;
     background-color: #ffffff;
     outline: 1px solid transparent;
     border-radius: 50px;
@@ -146,36 +165,34 @@
     -o-transform: translateY(-9px) rotate(-45deg);
     transform: translateY(-9px) rotate(-45deg);
   }
+
   .burger.clicked span:before, .burger.clicked span:after {
-    background-color:#1E2581;
+    background-color:#C2E6FF;
   }
+
   .burger:hover {
     cursor: pointer;
   }
 
   .logo{
     position: absolute;
-    top: 27px;
-    left: 29px;
-    width: 60px;
-    color:#ffffff;
-    z-index: 1008;
+    top: 16px;
+    left: 10px;
+    width: 37px;
+    z-index: 1020;
   }
 
   /*  NAV
   ========================================== */
   nav {
-    background-color:rgba(255,255,255,0.20);
+    background: linear-gradient(#1D2E62, #171625);
     position: fixed;
     z-index: 1009;
-    top: -47px;
     right: 0;
-    height: 350px;
-    max-width: 515px;
-    width: 288px;
+    height: 100%;
+    width: 100%;
     padding: 100px 40px 60px 40px;
     overflow-y: hidden;
-    border-radius: 0% 0% 0% 90px;
     -webkit-transform: translateX(100%);
     -moz-transform: translateX(100%);
     -ms-transform: translateX(100%);
@@ -192,7 +209,10 @@
     -ms-transform: translateX(0px);
     -o-transform: translateX(0px);
     transform: translateX(0px);
+    display: flex;
+    flex-direction: column;
   }
+
   nav.show ul.main li {
     -webkit-transform: translateX(0px);
     -moz-transform: translateX(0px);
@@ -239,7 +259,10 @@
   }
  
   nav ul.main {
-    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
   }
 
   nav ul.main li {
@@ -258,8 +281,9 @@
   nav ul.main li:last-of-type {
     margin-bottom: 0px;
   }
+  
   nav ul.main li a {
-    color: #1E2581;
+    color: #C2E6FF;
     font-family: "Raleway", sans-serif;
     text-decoration: none;
     text-transform: uppercase;
@@ -275,7 +299,7 @@
   }
 
   nav ul.main li a:hover {
-    color: #2656AD;
+    color: #70B8FF;
   }
   nav .about {
     margin-top: 40px;
@@ -313,7 +337,6 @@
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
     background-color: rgba(255,255,255,0.20);
-    backdrop-filter: blur(5px);
     opacity: 0;
     visibility: hidden;
   }
@@ -321,7 +344,6 @@
     opacity: 0.8;
     visibility: visible;
     background-color: rgba(255,255,255,0.20);
-    backdrop-filter: blur(5px);
   }
 }
 
