--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -3,13 +3,13 @@
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
-	gap: 30px;
+	gap: 50px;
+	background-color: #171626;
 }
 
 .projects_section h2{
 	font-size: 2rem;
 	color: #fff;
-	margin-bottom: 4%;
 	z-index: 1015;
 	font-weight: 800;
 }
