--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -60,7 +60,7 @@
 .project_card_title {
 	height: 20%;
 	padding-bottom: 8%;
-	font-size: 1.1rem;
+	font-size: 1.2rem;
 	font-weight: 600;
 }
 
@@ -84,10 +84,15 @@
 	line-height: 2;
 }
 
-
 .project_card_element{
 	height: fit-content;
 	background-color: #362662;
 	border-radius: 0.4rem;
 	padding: 0.2rem 0.6rem;
+}
+
+@media screen and (min-width: 1000px){
+	.projects_container {
+		flex-direction: row;
+	}
 }
