--- a/public/css/about.css
+++ b/public/css/about.css
@@ -294,16 +294,12 @@
 	.prez {
 		flex-direction: row;
     justify-content: space-evenly;
+		padding: 0 100px;
 	}
 
 	.avatar {
-    width: 25%;
+    width: 22%;
 	}
+
 }
-
-/* @media screen and (min-width: 1600px){
-	.avatar {
-    width: 20%;
-	}
-} */
 
