--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -183,7 +183,7 @@
 					<div class="projects_container">
 						<div class="project_card">
 							<div class="project_card_img">
-								<img src="{{ asset('image/hortus.png')}}" alt="Hortus Plantae Floresque">
+								<img src="{{ asset('image/Portfolio.png')}}" alt="Hortus Plantae Floresque">
 							</div>
 							<div class="project_card_body">
 								<h3 class="project_card_title">Mon Portfolio</h3>
