New compressed images for background

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -197,6 +197,21 @@
 						</div>
 						<div class="project_card">
 							<div class="project_card_img">
+								<img src="{{ asset('image/LOTR.png')}}" alt="Hortus Plantae Floresque">
+							</div>
+							<div class="project_card_body">
+								<h3 class="project_card_title">The Lord of the Rings Encyclopædia</h3>
+								<p class="project_card_description">Projet personnel en cours de développement</p>
+								<div class="project_card_tags">
+									<span class="project_card_element">Symfony</span>
+									<span class="project_card_element">React</span>
+									<span class="project_card_element">Redux</span>
+									<span class="project_card_element">API</span>
+								</div>
+							</div>
+						</div>
+						<div class="project_card">
+							<div class="project_card_img">
 								<img src="{{ asset('image/hortus.png')}}" alt="Hortus Plantae Floresque">
 							</div>
 							<div class="project_card_body">
@@ -206,20 +221,6 @@
 									<span class="project_card_element">Symfony</span>
 									<span class="project_card_element">CSS3</span>
 									<span class="project_card_element">Bootstrap</span>
-									<span class="project_card_element">JavaScript</span>
-								</div>
-							</div>
-						</div>
-						<div class="project_card">
-							<div class="project_card_img">
-								<img src="{{ asset('image/hortus.png')}}" alt="Hortus Plantae Floresque">
-							</div>
-							<div class="project_card_body">
-								<h3 class="project_card_title">Tolkien Library</h3>
-								<p class="project_card_description">Projet personnel</p>
-								<div class="project_card_tags">
-									<span class="project_card_element">Symfony</span>
-									<span class="project_card_element">CSS3</span>
 									<span class="project_card_element">JavaScript</span>
 								</div>
 							</div>
