responsive on main_section OK

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -201,7 +201,7 @@
 							</div>
 							<div class="project_card_body">
 								<h3 class="project_card_title">The Lord of the Rings Encyclopædia</h3>
-								<p class="project_card_description">Projet personnel en cours de développement</p>
+								<p class="project_card_description_lotr">Projet personnel en cours de développement</p>
 								<div class="project_card_tags">
 									<span class="project_card_element">Symfony</span>
 									<span class="project_card_element">React</span>
@@ -216,7 +216,7 @@
 							</div>
 							<div class="project_card_body">
 								<h3 class="project_card_title">Hortus Plantae Floresque</h3>
-								<p class="project_card_description">Site de partage sur le jardin et les plantes. Projet de fin d'étude réalisé en équipe</p>
+								<p class="project_card_description">Projet de fin d'étude réalise en équipe.</p>
 								<div class="project_card_tags">
 									<span class="project_card_element">Symfony</span>
 									<span class="project_card_element">CSS3</span>
@@ -232,8 +232,8 @@
 	{% endblock %}
 
 	{% block js %}
-		<script src="{{ asset('js/parallax.js') }}"></script>
 		<script src="{{ asset('js/twinkling_stars.js') }}"></script>
+		<script src="{{ asset('js/parallax.js') }}"></script>
 		<script src="{{ asset('js/burger.js') }}"></script>
 		<script src="{{ asset('js/mail_to_clipboard.js') }}"></script>
 	{% endblock %}
