--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -19,6 +19,7 @@
 	flex-direction: column;
 	align-items: center;
 	gap: 30px;
+	width: 85%;
 }
 
 .project_card {
@@ -26,10 +27,11 @@
 	overflow: hidden;
 	display: flex;
 	flex-direction: column;
-	width: 80%;
 	height: 400px;
 	border: 2px #0f0f0f00 solid;
 	border-radius: 10px;
+	width: 100%;
+	max-width: 470px;
 }
 
 .project_card_img{
@@ -42,6 +44,7 @@
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	object-position: top;
 }
 
 .project_card_body{
@@ -52,8 +55,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	flex-wrap: wrap;
-	align-content: center;
+	align-items: flex-start;
 	padding: 8%;
 }
 
@@ -71,6 +73,17 @@
 	font-size: 1rem;
 	font-weight: 300;
 	line-height: 1.5;
+}
+
+.project_card_description_lotr{
+	height: 45%;
+	padding-bottom: 8%;
+	color: #d0cfe2;
+	font-size: 1rem;
+	font-weight: 300;
+	line-height: 1.5;
+	display: flex;
+	align-items: flex-end;
 }
 
 .project_card_tags{
@@ -94,5 +107,11 @@
 @media screen and (min-width: 1000px){
 	.projects_container {
 		flex-direction: row;
+		flex-wrap: wrap;
+    justify-content: center;
+	}
+
+	.project_card {
+		width: 35%;
 	}
 }
